fix scrollbar style

--- a/src/code/base.css
+++ b/src/code/base.css
@@ -238,7 +238,7 @@ html[data-theme='dark'] {
     --ls-page-inline-code-color: hsl(var(--cl-primary));
     --ls-page-inline-code-bg-color: hsl(var(--cl-primary), 0.1);
     --ls-scrollbar-foreground-color: hsl(var(--cl-primary), 0.4);
-    /*--ls-scrollbar-background-color: var(--ls-secondary-background-color);*/
+    --ls-scrollbar-background-color: var(--ls-secondary-background-color);
     --ls-scrollbar-thumb-hover-color: hsl(var(--cl-primary));
     --ls-scrollbar-width: 6px;
     --ls-head-text-color: var(--ls-link-text-color);
@@ -371,7 +371,7 @@ html[data-theme='light'] {
     --ls-page-inline-code-color: hsl(var(--cl-primary));
     --ls-page-inline-code-bg-color: hsl(var(--cl-primary), 0.1);
     --ls-scrollbar-foreground-color: hsl(var(--cl-primary), 0.4);
-    /*--ls-scrollbar-background-color: var(--ls-secondary-background-color);*/
+    --ls-scrollbar-background-color: var(--ls-secondary-background-color);
     --ls-scrollbar-thumb-hover-color: hsl(var(--cl-primary));
     --ls-scrollbar-width: 6px;
     --ls-head-text-color: var(--ls-link-text-color);
